--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
@@ -41,11 +41,17 @@
   "businesspartner_app_businesspartnerassetjournal_choose": "业务伙伴资产交易选择",
   "businesspartner_app_businesspartnerassetjournal_view": "业务伙伴资产交易查看",
   "businesspartner_app_businesspartnerassetjournal_edit": "业务伙伴资产交易编辑",
+  "businesspartner_func_lead": "潜在客户",
+  "businesspartner_app_lead_list": "潜在客户列表",
+  "businesspartner_app_lead_choose": "潜在客户选择",
+  "businesspartner_app_lead_view": "潜在客户查看",
+  "businesspartner_app_lead_edit": "潜在客户编辑",
   "businesspartner_title_general": "常规信息",
   "businesspartner_title_contact": "联系信息",
   "businesspartner_title_values": "价值信息",
   "businesspartner_title_invoices": "开票信息",
   "businesspartner_title_others": "其他信息",
+  "businesspartner_turn_to_customer": "转为客户",
   "businesspartner_view_businesspartnerassetjournal": "查看交易",
   "businesspartner_new_businesspartnerassetjournal": "新建交易",
   "businesspartner_closing_delimiter": "----结束----"
