--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -197,7 +197,7 @@
         "bo_customer_code": "编码",
         "bo_customer_name": "名称",
         "bo_customer_sign": "标识",
-        "bo_customer_group": "组代码",
+        "bo_customer_group": "组",
         "bo_customer_activated": "激活",
         "bo_customer_companyprivate": "公司/个人",
         "bo_customer_contactperson": "联系人",
@@ -250,7 +250,7 @@
         "bo_supplier_code": "编码",
         "bo_supplier_name": "名称",
         "bo_supplier_sign": "标识",
-        "bo_supplier_group": "组代码",
+        "bo_supplier_group": "组",
         "bo_supplier_activated": "激活",
         "bo_supplier_companyprivate": "公司/个人",
         "bo_supplier_contactperson": "联系人",
@@ -302,7 +302,7 @@
         "bo_lead_code": "编码",
         "bo_lead_name": "名称",
         "bo_lead_sign": "标识",
-        "bo_lead_group": "组代码",
+        "bo_lead_group": "组",
         "bo_lead_activated": "激活",
         "bo_lead_companyprivate": "公司/个人",
         "bo_lead_contactperson": "联系人",
