增加付款条款

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
@@ -41,6 +41,11 @@
   "businesspartner_app_businesspartnerassetjournal_choose": "业务伙伴资产交易选择",
   "businesspartner_app_businesspartnerassetjournal_view": "业务伙伴资产交易查看",
   "businesspartner_app_businesspartnerassetjournal_edit": "业务伙伴资产交易编辑",
+  "businesspartner_func_paymentterm": "付款条款",
+  "businesspartner_app_paymentterm_list": "付款条款列表",
+  "businesspartner_app_paymentterm_choose": "付款条款选择",
+  "businesspartner_app_paymentterm_view": "付款条款查看",
+  "businesspartner_app_paymentterm_edit": "付款条款编辑",
   "businesspartner_func_lead": "潜在客户",
   "businesspartner_app_lead_list": "潜在客户列表",
   "businesspartner_app_lead_choose": "潜在客户选择",
