--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -221,6 +221,7 @@
         "bo_customer_invaliddate": "失效日期",
         "bo_customer_floorlist": "底价清单",
         "bo_customer_taxgroup": "税收组",
+        "bo_customer_paymentcode": "付款条款",
         "bo_customer_remarks": "备注",
         "bo_customer_referenced": "已引用",
         "bo_customer_deleted": "已删除",
@@ -274,6 +275,7 @@
         "bo_supplier_invaliddate": "失效日期",
         "bo_supplier_floorlist": "底价清单",
         "bo_supplier_taxgroup": "税收组",
+        "bo_supplier_paymentcode": "付款条款",
         "bo_supplier_remarks": "备注",
         "bo_supplier_referenced": "已引用",
         "bo_supplier_deleted": "已删除",
@@ -343,6 +345,34 @@
         "bo_lead_closing_delimiter": "----结束----"
     },
     {
+        "bo_paymentterm": "付款条款",
+        "bo_paymentterm_code": "编码",
+        "bo_paymentterm_name": "名称",
+        "bo_paymentterm_activated": "激活",
+        "bo_paymentterm_startat": "起始于",
+        "bo_paymentterm_extramonth": "附加月数",
+        "bo_paymentterm_extradays": "附加天数",
+        "bo_paymentterm_duedatebaseon": "到期日基于",
+        "bo_paymentterm_tolerancedays": "容差天数",
+        "bo_paymentterm_docentry": "对象编号",
+        "bo_paymentterm_objectcode": "对象类型",
+        "bo_paymentterm_createdate": "创建日期",
+        "bo_paymentterm_createtime": "创建时间",
+        "bo_paymentterm_updatedate": "修改日期",
+        "bo_paymentterm_updatetime": "修改时间",
+        "bo_paymentterm_loginst": "版本",
+        "bo_paymentterm_series": "服务系列",
+        "bo_paymentterm_datasource": "数据源",
+        "bo_paymentterm_createusersign": "创建用户",
+        "bo_paymentterm_updateusersign": "修改用户",
+        "bo_paymentterm_createactionid": "创建动作标识",
+        "bo_paymentterm_updateactionid": "更新动作标识",
+        "bo_paymentterm_dataowner": "数据所有者",
+        "bo_paymentterm_organization": "数据所属组织",
+        "bo_paymentterm_remarks": "备注",
+        "bo_paymentterm_closing_delimiter": "----结束----"
+    },
+    {
         "em_gender_male": "男",
         "em_gender_female": "女"
     },
@@ -354,5 +384,16 @@
     {
         "em_businesspartnernature_company": "公司",
         "em_businesspartnernature_private": "个人"
+    },
+    {
+        "em_duedatebaseon_document_date": "单据日期",
+        "em_duedatebaseon_posting_date": "过账日期",
+        "em_duedatebaseon_system_date": "系统日期"
+    },
+    {
+        "em_paytermduetype_none": "--",
+        "em_paytermduetype_month_start": "月初",
+        "em_paytermduetype_month_half": "月中",
+        "em_paytermduetype_month_end": "月末"
     }
 ]
