更新界面风格

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -38,7 +38,7 @@
         "bo_assetitem": "资产项目",
         "bo_assetitem_code": "编码",
         "bo_assetitem_name": "名称",
-        "bo_assetitem_group": "组",
+        "bo_assetitem_group": "资产组",
         "bo_assetitem_activated": "激活",
         "bo_assetitem_referenced": "已引用",
         "bo_assetitem_deleted": "已删除",
@@ -103,6 +103,7 @@
         "bo_businesspartnerasset_invaliddate": "失效日期",
         "bo_businesspartnerasset_amount": "剩余价值",
         "bo_businesspartnerasset_times": "剩余次数",
+        "bo_businesspartnerasset_basedocument": "基于单据",
         "bo_businesspartnerasset_basedocumenttype": "基于类型",
         "bo_businesspartnerasset_basedocumententry": "基于标识",
         "bo_businesspartnerasset_basedocumentlineid": "基于行号",
@@ -157,6 +158,7 @@
         "bo_businesspartnergroup_updateactionid": "更新动作标识",
         "bo_businesspartnergroup_dataowner": "数据所有者",
         "bo_businesspartnergroup_organization": "数据所属组织",
+        "bo_businesspartnergroup_remarks": "备注",
         "bo_businesspartnergroup_closing_delimiter": "----结束----"
     },
     {
@@ -197,7 +199,7 @@
         "bo_customer_code": "编码",
         "bo_customer_name": "名称",
         "bo_customer_sign": "标识",
-        "bo_customer_group": "组",
+        "bo_customer_group": "客户组",
         "bo_customer_activated": "激活",
         "bo_customer_companyprivate": "公司/个人",
         "bo_customer_contactperson": "联系人",
@@ -251,7 +253,7 @@
         "bo_supplier_code": "编码",
         "bo_supplier_name": "名称",
         "bo_supplier_sign": "标识",
-        "bo_supplier_group": "组",
+        "bo_supplier_group": "供应商组",
         "bo_supplier_activated": "激活",
         "bo_supplier_companyprivate": "公司/个人",
         "bo_supplier_contactperson": "联系人",
@@ -304,7 +306,7 @@
         "bo_lead_code": "编码",
         "bo_lead_name": "名称",
         "bo_lead_sign": "标识",
-        "bo_lead_group": "组",
+        "bo_lead_group": "客户组",
         "bo_lead_activated": "激活",
         "bo_lead_companyprivate": "公司/个人",
         "bo_lead_contactperson": "联系人",
