增加合同/协议功能

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -375,6 +375,37 @@
         "bo_paymentterm_closing_delimiter": "----结束----"
     },
     {
+        "bo_agreement": "合同/协议",
+        "bo_agreement_code": "编码",
+        "bo_agreement_name": "名称",
+        "bo_agreement_category": "类别",
+        "bo_agreement_activated": "激活",
+        "bo_agreement_businesspartner": "业务伙伴",
+        "bo_agreement_businesspartnertype": "业务伙伴类型",
+        "bo_agreement_businesspartnercode": "业务伙伴编码",
+        "bo_agreement_startdate": "开始日期",
+        "bo_agreement_closedate": "结束日期",
+        "bo_agreement_signdate": "签订日期",
+        "bo_agreement_abstracts": "摘要",
+        "bo_agreement_docentry": "对象编号",
+        "bo_agreement_objectcode": "对象类型",
+        "bo_agreement_createdate": "创建日期",
+        "bo_agreement_createtime": "创建时间",
+        "bo_agreement_updatedate": "修改日期",
+        "bo_agreement_updatetime": "修改时间",
+        "bo_agreement_loginst": "版本",
+        "bo_agreement_series": "服务系列",
+        "bo_agreement_datasource": "数据源",
+        "bo_agreement_createusersign": "创建用户",
+        "bo_agreement_updateusersign": "修改用户",
+        "bo_agreement_createactionid": "创建动作标识",
+        "bo_agreement_updateactionid": "更新动作标识",
+        "bo_agreement_dataowner": "数据所有者",
+        "bo_agreement_organization": "数据所属组织",
+        "bo_agreement_remarks": "备注",
+        "bo_agreement_closing_delimiter": "----结束----"
+    },
+    {
         "em_gender_male": "男",
         "em_gender_female": "女"
     },
