--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
@@ -46,6 +46,11 @@
   "businesspartner_app_paymentterm_choose": "付款条款选择",
   "businesspartner_app_paymentterm_view": "付款条款查看",
   "businesspartner_app_paymentterm_edit": "付款条款编辑",
+  "businesspartner_func_agreement": "合同/协议",
+  "businesspartner_app_agreement_list": "合同/协议列表",
+  "businesspartner_app_agreement_choose": "合同/协议选择",
+  "businesspartner_app_agreement_view": "合同/协议查看",
+  "businesspartner_app_agreement_edit": "合同/协议编辑",
   "businesspartner_func_lead": "潜在客户",
   "businesspartner_app_lead_list": "潜在客户列表",
   "businesspartner_app_lead_choose": "潜在客户选择",
