增加分类科目

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
@@ -62,6 +62,7 @@
   "businesspartner_title_invoices": "开票信息",
   "businesspartner_title_others": "其他信息",
   "businesspartner_turn_to_customer": "转为客户",
+  "businesspartner_ledgeraccount_setting": "科目设置",
   "businesspartner_view_businesspartnerassetjournal": "查看交易",
   "businesspartner_new_businesspartnerassetjournal": "新建交易",
   "businesspartner_closing_delimiter": "----结束----"
