增加供应商资产

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
@@ -36,6 +36,8 @@
   "businesspartner_app_businesspartnerasset_choose": "业务伙伴资产选择",
   "businesspartner_app_businesspartnerasset_view": "业务伙伴资产查看",
   "businesspartner_app_businesspartnerasset_edit": "业务伙伴资产编辑",
+  "businesspartner_app_customerasset_choose": "客户资产选择",
+  "businesspartner_app_supplierasset_choose": "供应商资产选择",
   "businesspartner_func_businesspartnerassetjournal": "业务伙伴资产交易",
   "businesspartner_app_businesspartnerassetjournal_list": "业务伙伴资产交易列表",
   "businesspartner_app_businesspartnerassetjournal_choose": "业务伙伴资产交易选择",
