增加内部对账相关

--- a/ibas.businesspartner/src/main/resources/i18n/locale.bp.properties
+++ b/ibas.businesspartner/src/main/resources/i18n/locale.bp.properties
@@ -14,3 +14,4 @@ msg_bp_lead_is_unavailable = 潜在客户[%s - %s]不可用
 msg_bp_assetitem_is_unavailable = 资产项目[%s - %s]不可用
 msg_bp_businesspartnerasset_is_unavailable = 业务伙伴[%s]资产[%s]不可用
 msg_bp_no_fetch_method_defined = 没有定义类型[%s]的检索方式
+msg_bp_reconciliation_amount_not_zero = 对账金额不为零
