--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -407,6 +407,61 @@
         "bo_agreement_closing_delimiter": "----结束----"
     },
     {
+        "bo_internalreconciliation": "内部对账",
+        "bo_internalreconciliation_docentry": "对象编号",
+        "bo_internalreconciliation_objectkey": "对象编号",
+        "bo_internalreconciliation_objectcode": "对象类型",
+        "bo_internalreconciliation_loginst": "实例号",
+        "bo_internalreconciliation_series": "服务系列",
+        "bo_internalreconciliation_datasource": "数据源",
+        "bo_internalreconciliation_createdate": "创建日期",
+        "bo_internalreconciliation_createtime": "创建时间",
+        "bo_internalreconciliation_updatedate": "更新日期",
+        "bo_internalreconciliation_updatetime": "更新时间",
+        "bo_internalreconciliation_createusersign": "创建用户",
+        "bo_internalreconciliation_updateusersign": "更新用户",
+        "bo_internalreconciliation_createactionid": "创建动作标识",
+        "bo_internalreconciliation_updateactionid": "更新动作标识",
+        "bo_internalreconciliation_dataowner": "数据所有者",
+        "bo_internalreconciliation_organization": "数据所属组织",
+        "bo_internalreconciliation_remarks": "备注",
+        "bo_internalreconciliation_canceled": "取消",
+        "bo_internalreconciliation_systemed": "系统",
+        "bo_internalreconciliation_basedocument": "基于单据",
+        "bo_internalreconciliation_basedocumenttype": "基于类型",
+        "bo_internalreconciliation_basedocumententry": "基于标识",
+        "bo_internalreconciliation_basedocumentlineid": "基于行号",
+        "bo_internalreconciliation_reconciliationtype": "对账类型",
+        "bo_internalreconciliation_reconciliationdate": "对账日期",
+        "bo_internalreconciliation_branch": "分支",
+        "bo_internalreconciliation_internalreconciliationlines": "内部对账-行集合",
+        "bo_internalreconciliationline": "内部对账-行",
+        "bo_internalreconciliationline_objectkey": "编号",
+        "bo_internalreconciliationline_lineid": "行号",
+        "bo_internalreconciliationline_objectcode": "对象类型",
+        "bo_internalreconciliationline_loginst": "实例号",
+        "bo_internalreconciliationline_datasource": "数据源",
+        "bo_internalreconciliationline_createdate": "创建日期",
+        "bo_internalreconciliationline_createtime": "创建时间",
+        "bo_internalreconciliationline_updatedate": "更新日期",
+        "bo_internalreconciliationline_updatetime": "更新时间",
+        "bo_internalreconciliationline_createusersign": "创建用户",
+        "bo_internalreconciliationline_updateusersign": "更新用户",
+        "bo_internalreconciliationline_createactionid": "创建动作标识",
+        "bo_internalreconciliationline_updateactionid": "更新动作标识",
+        "bo_internalreconciliationline_remarks": "备注",
+        "bo_internalreconciliationline_shortname": "业务伙伴/科目代码",
+        "bo_internalreconciliationline_document": "源单据",
+        "bo_internalreconciliationline_documenttype": "源单据类型",
+        "bo_internalreconciliationline_documententry": "源单据编号",
+        "bo_internalreconciliationline_documentlineid": "源单据行号",
+        "bo_internalreconciliationline_category": "类别",
+        "bo_internalreconciliationline_amount": "金额",
+        "bo_internalreconciliationline_currency": "货币",
+        "bo_internalreconciliationline_rate": "汇率",
+        "bo_internalreconciliation_closing_delimiter": "----结束----"
+    },
+    {
         "em_gender_male": "男",
         "em_gender_female": "女"
     },
