--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
@@ -64,6 +64,9 @@
   "businesspartner_title_invoices": "开票信息",
   "businesspartner_title_others": "其他信息",
   "businesspartner_turn_to_customer": "转为客户",
+  "businesspartner_customer_already_exists": "客户[{0} - {1}]已存在",
+  "businesspartner_continue_create_new_customer_contact_and_address": "是否创建新的联系人及地址实例？",
+  "businesspartner_create_new_customer_contact_and_address": "创建了新的{0}，{1}",
   "businesspartner_ledgeraccount_setting": "科目设置",
   "businesspartner_view_businesspartnerassetjournal": "查看交易",
   "businesspartner_new_businesspartnerassetjournal": "新建交易",
