业务伙伴资产增加银行账户

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -104,6 +104,7 @@
         "bo_businesspartnerasset_amount": "剩余价值",
         "bo_businesspartnerasset_amount_unit": "价值单位",
         "bo_businesspartnerasset_times": "剩余次数",
+        "bo_businesspartnerasset_bankaccount": "银行账户",
         "bo_businesspartnerasset_basedocument": "基于单据",
         "bo_businesspartnerasset_basedocumenttype": "基于类型",
         "bo_businesspartnerasset_basedocumententry": "基于标识",
@@ -132,6 +133,7 @@
         "bo_businesspartnerassetjournal_direction": "方向",
         "bo_businesspartnerassetjournal_amount": "交易量",
         "bo_businesspartnerassetjournal_times": "交易次数",
+        "bo_businesspartnerassetjournal_basedocument": "基于单据",
         "bo_businesspartnerassetjournal_basedocumenttype": "基于类型",
         "bo_businesspartnerassetjournal_basedocumententry": "基于标识",
         "bo_businesspartnerassetjournal_basedocumentlineid": "基于行号",
