增加地址、联系人组

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -5,6 +5,7 @@
         "bo_address_ownertype": "归属类型",
         "bo_address_activated": "有效的",
         "bo_address_name": "名称",
+        "bo_address_group": "组",
         "bo_address_street": "街道",
         "bo_address_district": "县/区",
         "bo_address_city": "市",
@@ -170,6 +171,7 @@
         "bo_contactperson_ownertype": "归属类型",
         "bo_contactperson_activated": "有效的",
         "bo_contactperson_name": "名称",
+        "bo_contactperson_group": "组",
         "bo_contactperson_gender": "性别",
         "bo_contactperson_position": "职位",
         "bo_contactperson_address": "地址",
