增加英文描述

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.json
@@ -1,2 +1,74 @@
 {
+    "businesspartner": "Business Partner",
+    "businesspartner_icon": "sap-icon://customer-and-supplier",
+    "businesspartner_func_businesspartnergroup": "Business Partner Group",
+    "businesspartner_app_businesspartnergroup_list": "Business Partner Group List",
+    "businesspartner_app_businesspartnergroup_choose": "Choose Business Partner Group",
+    "businesspartner_app_businesspartnergroup_view": "View Business Partner Group",
+    "businesspartner_app_businesspartnergroup_edit": "Edit Business Partner Group",
+    "businesspartner_func_customer": "Customer",
+    "businesspartner_app_customer_list": "Customer List",
+    "businesspartner_app_customer_choose": "Choose Customer",
+    "businesspartner_app_customer_view": "View Customer",
+    "businesspartner_app_customer_edit": "Edit Customer",
+    "businesspartner_func_supplier": "Supplier",
+    "businesspartner_app_supplier_list": "Supplier List",
+    "businesspartner_app_supplier_choose": "Choose Supplier",
+    "businesspartner_app_supplier_view": "View Supplier",
+    "businesspartner_app_supplier_edit": "Edit Supplier",
+    "businesspartner_func_contactperson": "Business Partner Contact Person",
+    "businesspartner_app_contactperson_list": "Business Partner Contact Person List",
+    "businesspartner_app_contactperson_choose": "Choose Business Partner Contact Person",
+    "businesspartner_app_contactperson_view": "View Business Partner Contact Person",
+    "businesspartner_app_contactperson_edit": "Edit Business Partner Contact Person",
+    "businesspartner_func_address": "Business Partner Address",
+    "businesspartner_app_address_list": "Business Partner Address List",
+    "businesspartner_app_address_choose": "Choose Business Partner Address",
+    "businesspartner_app_address_view": "View Business Partner Address",
+    "businesspartner_app_address_edit": "Edit Business Partner Address",
+    "businesspartner_func_assetitem": "Asset Item",
+    "businesspartner_app_assetitem_list": "Asset Item List",
+    "businesspartner_app_assetitem_choose": "Choose Asset Item",
+    "businesspartner_app_assetitem_view": "View Asset Item",
+    "businesspartner_app_assetitem_edit": "Edit Asset Item",
+    "businesspartner_func_businesspartnerasset": "Business Partner Asset",
+    "businesspartner_app_businesspartnerasset_list": "Business Partner Asset List",
+    "businesspartner_app_businesspartnerasset_choose": "Choose Business Partner Asset",
+    "businesspartner_app_businesspartnerasset_view": "View Business Partner Asset",
+    "businesspartner_app_businesspartnerasset_edit": "Edit Business Partner Asset",
+    "businesspartner_app_customerasset_choose": "Choose Customer Asset",
+    "businesspartner_app_supplierasset_choose": "Choose Supplier Asset",
+    "businesspartner_func_businesspartnerassetjournal": "Business Partner Asset Transaction",
+    "businesspartner_app_businesspartnerassetjournal_list": "Business Partner Asset Transaction List",
+    "businesspartner_app_businesspartnerassetjournal_choose": "Choose Business Partner Asset Transaction",
+    "businesspartner_app_businesspartnerassetjournal_view": "View Business Partner Asset Transaction",
+    "businesspartner_app_businesspartnerassetjournal_edit": "Edit Business Partner Asset Transaction",
+    "businesspartner_func_paymentterm": "Payment Term",
+    "businesspartner_app_paymentterm_list": "Payment Term List",
+    "businesspartner_app_paymentterm_choose": "Choose Payment Term",
+    "businesspartner_app_paymentterm_view": "View Payment Term",
+    "businesspartner_app_paymentterm_edit": "Edit Payment Term",
+    "businesspartner_func_agreement": "Agreement",
+    "businesspartner_app_agreement_list": "Agreement List",
+    "businesspartner_app_agreement_choose": "Choose Agreement",
+    "businesspartner_app_agreement_view": "View Agreement",
+    "businesspartner_app_agreement_edit": "Edit Agreement",
+    "businesspartner_func_lead": "Lead",
+    "businesspartner_app_lead_list": "Lead List",
+    "businesspartner_app_lead_choose": "Choose Lead",
+    "businesspartner_app_lead_view": "View Lead",
+    "businesspartner_app_lead_edit": "Edit Lead",
+    "businesspartner_title_general": "General Information",
+    "businesspartner_title_contact": "Contact Information",
+    "businesspartner_title_values": "Value Information",
+    "businesspartner_title_invoices": "Invoice Information",
+    "businesspartner_title_others": "Other Information",
+    "businesspartner_turn_to_customer": "Convert to Customer",
+    "businesspartner_customer_already_exists": "Customer [{0} - {1}] already exists",
+    "businesspartner_continue_create_new_customer_contact_and_address": "Do you want to create new contact and address instances?",
+    "businesspartner_create_new_customer_contact_and_address": "Created new {0}, {1}",
+    "businesspartner_ledgeraccount_setting": "Ledger Account Settings",
+    "businesspartner_view_businesspartnerassetjournal": "View Transaction",
+    "businesspartner_new_businesspartnerassetjournal": "New Transaction",
+    "businesspartner_closing_delimiter": "----End----"
 }
