收付款增加分支、可关闭单据

--- a/ibas.businesspartner/src/main/resources/i18n/locale.bp.properties
+++ b/ibas.businesspartner/src/main/resources/i18n/locale.bp.properties
@@ -7,6 +7,8 @@ msg_bp_businesspartnerasset_exceeding_overdraft_range = 业务伙伴[%s]资产[%
 msg_bp_businesspartnerasset_exceeding_amount = 业务伙伴[%s]资产[%s]超出可用价值[%s]
 msg_bp_businesspartnerasset_not_allowed_recharge = 业务伙伴[%s]资产[%s]不允许充值
 msg_bp_businesspartnerasset_exceeding_times = 业务伙伴[%s]资产[%s]超过允许使用次数[%s]
+msg_bp_document_paided_not_allowed_deleted = 单据[%s]已付款，不允许删除
+msg_bp_document_paided_not_allowed_canceled = 单据[%s]已付款，不允许取消
 msg_bp_disagreement_unit_with_assetitem = 单位与资产项目[%s]设置的不一致
 msg_bp_customer_is_unavailable = 客户[%s - %s]不可用
 msg_bp_supplier_is_unavailable = 供应商[%s - %s]不可用
